# AI-Agent-Professional-Persona

./: .gitignore  README.md  app.py  persona.ipynb  pyproject.toml  requirements.txt
me/: summary.txt
