[project]
name = "ai-agent-professional-persona"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter",
    "ipykernel",
    "python-dotenv",
    "openai",
    "anthropic",
    "langchain",
    "langchain-anthropic",
    "langchain-community",
    "langchain-experimental",
    "langchain-openai",
    "langgraph",
    "langgraph-checkpoint-sqlite",
    "langsmith",
    "semantic-kernel",
    "autogen-agentchat",
    "autogen-ext",
    "gradio",
    "ipywidgets",
    "playwright",
    "plotly",
    "polygon-api-client",
    "psutil",
    "pypdf",
    "pypdf2",
    "requests",
    "sendgrid",
    "setuptools",
    "smithery",
    "speedtest-cli",
    "wikipedia",
    "bs4",
    "lxml",
    "mcp",
    "mcp-server-fetch",
    "httpx"
]
